--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.3.0-beta2",
-    "mongoose": "^5.6.7"
+    "mongodb": "^3.3.0-beta2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
